# picsa

./: .gitmodules  404.html  README.md  index.html
AWS-MWAA/picsa-airflow-dags/: .gitignore  .tool-versions  README.md
AWS-MWAA/picsa-airflow-dags/.github/workflows/: sync.yaml  validate-terraform.yaml
AWS-MWAA/picsa-airflow-dags/code/dags/etl_rds_to_s3/: etl_rds_to_s3.py
AWS-MWAA/picsa-airflow-dags/code/dags/etl_s3_to_rds/: etl_s3_to_rds.py  requirements.txt
AWS-MWAA/picsa-airflow-dags/code/dags/etl_s3_to_rds/raw_data/: booking.csv  client.csv
AWS-MWAA/picsa-airflow-dags/code/dags/invoke_lambda/: invoke_lambda.py  requirements.txt
AWS-MWAA/picsa-orquestador-airflow/: .gitignore  .tool-versions  README.md
AWS-MWAA/picsa-orquestador-airflow/.github/workflows/: validate-compose.yml  validate-terraform.yml
AWS-MWAA/picsa-orquestador-airflow/code/dags/: list_python_packages.py
AWS-MWAA/picsa-orquestador-airflow/code/docker/: docker-compose.yaml
LogAnalytics/: README.md
LogAnalytics/BDWatchdogFaaS/: README.md
LogAnalytics/BDWatchdogFaaS/AWS/: AWSTemplate.yaml  LogStatsForwarder.py  PowerBiForwarder.py  README.md  samconfig.toml
PYCSA/: README.md
PYCSA/lambdas/example/: .envrc  pyproject.toml
PYCSA/lambdas/example/ci/: __init__.py
PYCSA/lambdas/example/src/: lambda_function.py
PYCSA/lambdas/example/tests/integration/: test_integration.py
PYCSA/lambdas/example/tests/unit/: test_unit.py
Productivity/: README.md
bdwatchdogfaas/bdwatchdogfaas/: index.html
search/: search_index.json
(+66 files in other folders)
