[tool.poetry]
name = "src"
version = "1.0.0"
description = "Lambda de ejemplo"
authors = ["PICSA", "UDC"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.71"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pylint = "^2.16.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "ut: Unit test",
    "it: Integration test",
]

[tool.poetry.scripts]
test='ci:test'
test-it='ci:test_it'
lint = 'ci:lint'
format = 'ci:format_code'
verify = 'ci:verify'
package = 'ci:package'
